; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_huge.c_huge_ralloc_move_helper.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_huge.c_huge_ralloc_move_helper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@chunksize = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32*, i64, i64, i32, i32*)* @huge_ralloc_move_helper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @huge_ralloc_move_helper(i32* %0, i32* %1, i64 %2, i64 %3, i32 %4, i32* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i64 %2, i64* %10, align 8
  store i64 %3, i64* %11, align 8
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  %14 = load i64, i64* %11, align 8
  %15 = load i64, i64* @chunksize, align 8
  %16 = icmp ule i64 %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %6
  %18 = load i32*, i32** %8, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = load i64, i64* %10, align 8
  %21 = load i32, i32* %12, align 4
  %22 = load i32*, i32** %13, align 8
  %23 = call i8* @huge_malloc(i32* %18, i32* %19, i64 %20, i32 %21, i32* %22)
  store i8* %23, i8** %7, align 8
  br label %32

24:                                               ; preds = %6
  %25 = load i32*, i32** %8, align 8
  %26 = load i32*, i32** %9, align 8
  %27 = load i64, i64* %10, align 8
  %28 = load i64, i64* %11, align 8
  %29 = load i32, i32* %12, align 4
  %30 = load i32*, i32** %13, align 8
  %31 = call i8* @huge_palloc(i32* %25, i32* %26, i64 %27, i64 %28, i32 %29, i32* %30)
  store i8* %31, i8** %7, align 8
  br label %32

32:                                               ; preds = %24, %17
  %33 = load i8*, i8** %7, align 8
  ret i8* %33
}

declare dso_local i8* @huge_malloc(i32*, i32*, i64, i32, i32*) #1

declare dso_local i8* @huge_palloc(i32*, i32*, i64, i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
